--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,18 @@
-# Requirements cho Backend Flask
-# Cài đặt: pip install -r requirements.txt
+# Requirements for Backend Flask
+# Install: pip install -r requirements.txt
 
-# Framework chính
+# Web Framework
 Flask==3.0.0
-
-# CORS support để frontend Angular có thể gọi API
 Flask-CORS==4.0.0
 
-# Thư viện làm việc với môi trường variables
+# Database - SQL Server
+pyodbc==5.1.0
+
+# Environment Variables
 python-dotenv==1.0.0
 
-# Thư viện để làm việc với datetime
+# Date/Time Utilities
 python-dateutil==2.8.2
 
-# LLM Integration
+# LLM Integration (Ollama)
 ollama==0.6.1
-
-# Utilities
-python-dotenv==1.0.0
